--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,20 +2,31 @@
   <div class="w-inner clearfix">
     <div class="w-content">
       <div class="fullcontent-left">
-        <img src="/images/levent.png">
-
-
-        <%= @page.organization.name %>
-        <%= @page.project.name %>
-
+        <img src="/images/gercek.png">
+        <div class="related-organization">
+          <h2>Desteklediği Kuruluş:</h2>
+          <h3><a href="#"><%= @page.organization.name %></a></h3>
+          <h6><%= @page.project.name %></h6>
+          <img src="images/nesin.png">
+          <p class="small">Nesin Vakfı 1973'te Aziz Nesin tarafından kurulmuştur. Nesin Vakfı'nın amacı, eğitim olanaklarından yoksun çocukların, tükettiğinden çok üreten... <a href="#">devamı</a></p>
+        </div>
       </div>
+
+
       <div class="fullcontent-right">
         <div class="comment-bubble rc">
           <h1><%= @page.title %></h1>
           <h6>Levent Bas</h6>
 
           <div class="share-options">
-            <a href="http://twitter.com/share" class="twitter-share-button" data-text="Twitter'da Paylaş" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
+            <ul>
+              <li><fb:like layout="button_count" show_faces="false" width="150"></fb:like></li>
+              <li><a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş</a></li>
+              <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" >Tweet</a></li>
+             	<li><a style="background: url(http://friendfeed.com/static/images/icons/internal.png) 0px 0px no-repeat; padding-left: 20px; margin-left: 30px;" href="http://friendfeed.com/?url=<%= request.url %>&amp;title=<%= @page.title %>" target="_blank">FriendFeed'de Paylaş</a></li>
+            </ul>
+
           </div>
         </div><!-- .comment-bubble -->
 
@@ -25,6 +36,17 @@
 
         <p><%= @page.description %></p>
 
+        <div class="photo-gallery">
+          <%= image_tag @page.logo.url(:thumb) %>
+        </div>
+
+        <div>
+            <b>Başlangıç:</b>
+            <%=human_readable_datetime @page.start_time %>
+
+            <b>Bitiş:</b>
+            <%=human_readable_datetime @page.end_time %>
+          </div>
 
       </div>
     </div>
@@ -91,43 +113,6 @@
         <%= link_to 'Düzenle', edit_page_path(@page) %>
       <% end %>
 
-      <%= image_tag @page.logo.url(:thumb) %>
-
-      <p>
-        <b>Tanım:</b>
-
-      </p>
-
-      <p>
-        <b>Başlangıç:</b>
-        <%=human_readable_datetime @page.start_time %>
-      </p>
-
-      <p>
-        <b>Bitiş:</b>
-        <%=human_readable_datetime @page.end_time %>
-      </p>
-
-
-      <p>
-        <b>Kurum:</b>
-
-      </p>
-
-      <p>
-        <b>Proje:</b>
-      </p>
-
-      <p>
-      	<fb:like layout="button_count" show_faces="false" width="150"></fb:like>
-      	<a name="fb_share" type="button_count href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş </a>
-      </p>
-
-      <p>
-      	<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" >Tweet</a>
-      	<a style="background: url(http://friendfeed.com/static/images/icons/internal.png) 0px 0px no-repeat; padding-left: 20px; margin-left: 30px;" href="http://friendfeed.com/?url=
-      		<%= request.url %>&amp;title=<%= @page.title %>" target="_blank">FriendFeed'de Paylaş</a>
-      </p>
 
 
 
