--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -931,6 +931,75 @@ body {
 .ie6 #container { height:100%; }
 
 
+
+
+
+
+
+
+/*
+** TUM BAGISLARI LISTELE
+*/
+#donation-pages-container{
+
+}
+
+.row {
+  padding: 10px 0;
+  margin: 0;
+  clear:both;
+  padding: 10px 0 10px;
+  border-bottom: 1px dotted #ddd;
+}
+
+.row-hover {
+  background: #f5f5f5;
+}
+
+.row-hover h2 a,
+.row-hover p a {
+  color: #003366;
+}
+
+.row .button{
+  margin: 0 6px !important;
+}
+
+.row-photo {
+  float: left;
+  border: 1px solid #DDD;
+  padding: 4px;
+  width: 200px;
+}
+
+.row-photo img {
+  width: 200px;
+  height: auto;
+  max-height: 400px;
+}
+
+.row-details {
+  padding-left: 225px;
+}
+
+.row-action{
+  margin: 20px auto;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 ** TOOLS
 **
@@ -1028,8 +1097,7 @@ body {
   	border-bottom: 1px solid rgba(0,0,0,0.25);
   	position: relative;
   	cursor: pointer;
-  	text-transform: capitalize;
-  	margin-left: 120px; }
+   }
 
   .button:hover	{ background-color: #111; color: #fff; 	border-bottom: 1px solid rgba(0,0,0,0.25) !important;}
   .button:active { top: 1px; }
@@ -1355,11 +1423,6 @@ body {
 
 .widget-aktif-bagis p{ margin-bottom:5px; font-size:85%; }
 
-.row { clear:both; margin-bottom:0; padding: 10px 0 5px; border-bottom: 1px dotted #ddd; }
-.row-hover { background: #f5f5f5; }
-.row-hover h2 a,
-.row-hover p a { color: #003366;}
-.row .button{margin: 0 6px !important;}
 
 
 .share-options{
