yeni proje ve gonullu profil sayfasi guncellendi.

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,11 @@
 <div id="main-content">
   <div class="widget widget-light">
     <div class="w-inner">
-      <div class="w-title">Bağış Kampanyası Oluştur</div>
-    
+      <div class="w-title">Proje Oluştur</div>
+
       <%= render 'form' %>
-      <%= link_to 'Back', projects_path %> 
-    
+      <%= link_to 'Back', projects_path %>
+
     </div>
   </div>
 </div><!-- end of #main-content -->
