--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,23 +26,27 @@
           <div class="w-title">Action</div>
           <ul>
              <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user.id) %></li>
-             <li><%= link_to "Sayfalarım", my_pages_path %></li>
-
              <li><%= link_to "Çıkış", destroy_user_session_path %></li>
-
-             <li>Projeler</li>
+          </ul>
+          <br />
+          <ul>
              <li><%= link_to "Projeler", projects_path %></li>
+             <li><%= link_to "Projelerimiz", our_projects_path %></li>
              <li><%= link_to "Proje Yarat", new_project_path %></li>
-           	 <li><%= link_to "Projelerimiz", our_projects_path %></li>
+          </ul>
+             <br />
+          <ul>
+          	 <li><%= link_to "Sayfalar", pages_path %></li>
+           	 <li><%= link_to "Sayfalarım", my_pages_path %></li>
              <li><%= link_to "Bağış Kampanyası Düzenle", new_page_path %></li>
-
-
-            <% if current_user.organization.nil? %>
-              	<li><%= link_to "Kurum Ekle", new_organization_path %></li>
-            <% else%>
-              <li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_user.organization) %></li>
-            <% end %>
-
+          </ul>
+             <br />
+          <ul>
+          <% if current_user.organization.nil? %>
+            	<li><%= link_to "Kurum Ekle", new_organization_path %></li>
+          <% else%>
+            <li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_user.organization) %></li>
+          <% end %>
           </ul>
         </div>
    </div>
