paypal-master merge'u tamamlandi. bir cok ufak hata duzeltildi, eksiklik giderildi

--- a/app/views/contact_forms/show.html.erb
+++ b/app/views/contact_forms/show.html.erb
@@ -36,5 +36,4 @@ Yeni Mesaj
   <%= @contact_form.other %>
 </p>
 
-<%= link_to 'Edit', edit_contact_form_path(@contact_form) %> |
-<%= link_to 'Back', contact_forms_path %>
+<%= link_to 'Geri', contact_forms_path %>
