--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -4,8 +4,8 @@
 
     <%= render 'form' %>
 
-    <%= link_to 'Show', @organization %> |
-    <%= link_to 'Back', organizations_path %>
+    <%= link_to @organization.name, @organization %> |
+    <%= link_to 'Kurumlar', organizations_path %>
 
     </div>
   </div>
