--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,7 +4,7 @@
       <div class="w-title">Proje Oluştur</div>
 
       <%= render 'form' %>
-      <%= link_to 'Back', projects_path %>
+      <%= link_to 'Projeler', projects_path %>
 
     </div>
   </div>
