--- a/app/views/layouts/_sidebar_kurum.erb
+++ b/app/views/layouts/_sidebar_kurum.erb
@@ -3,24 +3,23 @@
     <div class="w-inner">
       <div class="w-title">Ben de bağış toplamak istiyorum!</div>
       <p>BenVarım üyeleri istedikleri vakıf ve dernek için bağış kampanyası düzenleyebilir ve tamamen güvenli olan sistemimiz aracılığıyla para toplamaya başlayabilirler.</p>
-      
-      <a href="/organizations/sign_up" class="button green large">Bağış Kampanyası Oluştur</a>
-      
+
+      <%=link_to "Bağış Kampanyası Oluştur", :new_project, :class => "button green large"%>
     </div>
   </div>
-  
-  <!-- 
+
+  <!--
   <div id="w-facebook" class="widget widget-dark">
-    <div class="w-inner"> 
+    <div class="w-inner">
       <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FBen-Varim%2F135114429880530&amp;width=260&amp;colorscheme=light&amp;show_faces=true&amp;stream=false&amp;header=true&amp;height=62" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:62px;" allowTransparency="true"></iframe>
     </div>
   </div>
   end of .widget -->
-  
-  
+
+
   <div id="w-twitter" class="widget widget-dark">
     <div class="w-inner">
-    
+
       <script src="http://widgets.twimg.com/j/2/widget.js"></script>
       <script>
       new TWTR.Widget({
@@ -52,8 +51,8 @@
         }
       }).render().setUser('Ben_Varim').start();
       </script>
-    
+
     </div>
-  </div><!-- end of .widget --> 
-  
+  </div><!-- end of .widget -->
+
 </div><!-- end of #sidebar -->
