--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,10 @@
 
 <div id="content" class="clearfix">
   <div class="container">
-    <%=render :partial => 'layouts/errors'%>
+    <%
+    #dont show errors here, they are displayed inside the page
+    # render :partial => 'layouts/errors'
+    %>
 
     <%= yield %>
   </div>
