--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -29,10 +29,11 @@
         <% end %>
       </div>
 
-      <div class="row-action">
-        <p>Bu tuşu yalnızca dernek ve vakıf kuruluşları görmeli</p>
-        <%= link_to 'Yeni bağış projesi oluştur!', new_project_path, :class=>"green button super" %>
-      </div>
+      <% unless current_user.organization.nil? %>
+        <div class="row-action">
+          <%= link_to 'Yeni bağış projesi oluştur!', new_project_path, :class=>"green button super" %>
+        </div>
+      <% end %>
 
     </div>
   </div>
