--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing project</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to @project.name, @project %> |
+<%= link_to 'Projeler', projects_path %>
