--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @page, :html => { :multipart => true } do |f| %>
   <% if @page.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@page.errors.count, "error") %> prohibited this page from being saved:</h2>
+      <h2>Lütfen bu <%=@page.errors.count %> hatayı düzeltiniz </h2>
 
       <ul>
       <% @page.errors.full_messages.each do |msg| %>
@@ -13,19 +13,21 @@
 
   <div class="field">
     <%= f.label :organization_id %>
-    <% if @page.new_record? %>
-      <%= f.select :organization_id, @organizations, {:include_blank => true} %>
-    <% else %>
+    <% unless @page.organization.nil? %>
       <%=@page.organization.name%>
+      <%=f.hidden_field :organization_id%>
+    <% else %>
+      <%= f.select :organization_id, @organizations, {:include_blank => true} %>
     <% end %>
 
   </div>
   <div class="field">
     <%= f.label :project_id %>
-    <% if @page.new_record? %>
-      <%= f.select :project_id, @projects, {:include_blank => true}%>
-    <% else %>
+    <% unless @page.project.nil? %>
       <%=@page.project.name%>
+      <%=f.hidden_field :project_id%>
+    <% else %>
+      <%= f.select :project_id, @projects, {:include_blank => true}%>
     <% end %>
   </div>
 
