--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,8 @@
             </div>
           <% end %>
         <p>
-          <b>Aktivist:</b>
-          <%= @user.name %>, <%=@user.age%>
+          <b>Gönüllü:</b>
+          <%= @user.name %>
         </p>
 
         <p>
@@ -21,36 +21,36 @@
      </div>
    </div>
 
+<% if user_signed_in? && current_user == @user%>
    <div class="widget widget-light">
        <div class="w-inner">
-          <div class="w-title">Action</div>
+          <div class="w-title">Yönetim Paneli</div>
           <ul>
              <li><%= link_to "Bilgilerimi Düzenle", edit_user_path(current_user.id) %></li>
              <li><%= link_to "Çıkış", destroy_user_session_path %></li>
           </ul>
           <br />
           <ul>
-             <li><%= link_to "Projeler", projects_path %></li>
-             <li><%= link_to "Projelerimiz", our_projects_path %></li>
-             <li><%= link_to "Proje Yarat", new_project_path %></li>
-          </ul>
-             <br />
-          <ul>
-          	 <li><%= link_to "Sayfalar", pages_path %></li>
-           	 <li><%= link_to "Sayfalarım", my_pages_path %></li>
-             <li><%= link_to "Bağış Kampanyası Düzenle", new_page_path %></li>
-          </ul>
-             <br />
-          <ul>
           <% if current_user.organization.nil? %>
             	<li><%= link_to "Kurum Ekle", new_organization_path %></li>
           <% else%>
-            <li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_user.organization) %></li>
+            <ul>
+              <li><%= link_to "Kurum Bilgilerini Düzenle", edit_organization_path(current_user.organization) %></li>
+               <li><%= link_to "Projeler", projects_path %></li>
+               <li><%= link_to "Projelerimiz", our_projects_path %></li>
+               <li><%= link_to "Proje Yarat", new_project_path %></li>
+            </ul>
           <% end %>
+             <br />
+          <ul>
+           	 <li><%= link_to "Bağış Kampanyalarım", my_pages_path %></li>
+             <li><%= link_to "Bağış Kampanyası Düzenle", new_page_path %></li>
           </ul>
+             <br />
+
         </div>
    </div>
-
+<% end %>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
