organizasyon taniminin non-html versiyonu eklendi, bagis kampayasi sayfasindaki degiskenler duzeltildi. progress gostermek icin javascripte gerek yok, html ile degistirldi. sayfa listelenedei donati linki duzeltildi

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -28,7 +28,7 @@
   </div>
   <div class="field">
     <%= f.label :description %>
-    <%= f.text_area :description, :class => "mceEditor text-area" %>
+    <%= f.text_area :description_html, :class => "mceEditor text-area" %>
   </div>
   <div class="actions">
     <%= f.submit :kaydet, :class=>"button yellow button-primary" %>
