--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -8,7 +8,6 @@
     <div class="w-content">
       <div class="fullcontent-left">
         <%= image_tag @organization.logo.url(:thumb) %>
-        <a href="#" class="yellow button super no-margin">Bağış Yap</a>
       </div>
       <div class="fullcontent-right">
         <% if (user_signed_in? && current_user.organization == @organization)%>
@@ -22,7 +21,7 @@
         <h1><%= @organization.name %></h1>
         <h6><%= @organization.address %></h6>
         <p class="outlink"><a href="http://www.nesinvakfi.com">RAILS: http://www.nesinvakfi.com</a></p>
-        <%= raw @organization.description unless @organization.description.nil? %>
+        <%= raw @organization.description_html unless @organization.description_html.nil? %>
       </div>
     </div>
   </div>
@@ -33,12 +32,12 @@
     <div class="w-inner clearfix">
       <div class="w-title">Aktif Bağış Kampanyaları</div>
       <div class="w-content">
-      <%@organization.projects.each do |project|%>
+      <%@organization.pages.each do |page|%>
         <div class="row">
-            <h2><%=link_to project.name, project%></h2>
-            <%=link_to "Destekle", new_page_for_project_path(project), :class => "yellow button right no-margin"%>
+            <h2><%=link_to page.title, page%></h2>
+            <%=link_to "Bağış Yap", donate_path(page), :class => "yellow button right no-margin"%>
             <p>
-              <%=project.description[0..200]%><%=link_to "Detaylı bilgi", project%>
+              <%=page.description[0..200]%><%=link_to "Detaylı bilgi", page%>
             </p>
         </div><!-- end of .row -->
       <% end %>
@@ -67,7 +66,7 @@
 
 
         <div class="row center">
-            <a href="#" class="green button super">Ben de bağış kampanyası düzenlemek istiyorum!</a>
+          <%=link_to "Ben de bağış kampanyası düzenlemek istiyorum!", new_page_for_organization_path(@organization), :class => "green button super" %>
         </div><!-- end of .row -->
 
 
