--- a/app/views/pages/_list_pages.html.erb
+++ b/app/views/pages/_list_pages.html.erb
@@ -17,6 +17,7 @@
               <p><%= human_readable_datetime page.end_time %></p>
               <p>Hedef: <%= page.goal %></p>
               <p>Toplanan: <%= page.collected %></p>
+              <%=link_to "Bağış Yap", donate_path(page), :class => "yellow button super no-margin"%>
               <p></p>
               <% if @show_edit_link %>
                 <p><%= link_to 'Düzenle', edit_page_path(page) %></p>
@@ -30,7 +31,11 @@
       </div>
 
       <div class="row-action">
-        <%= link_to 'Ben de bağış kampanyası düzenlemek istiyorum!', new_page_path, :class=>"green button super" %>
+        <% unless user_signed_in? && current_user.pages.length > 0 %>
+          <%= link_to 'Ben de bağış kampanyası düzenlemek istiyorum!', new_page_path, :class=>"green button super" %>
+        <% else %>
+          <%= link_to 'Yeni bağış kampanyası düzenle!', new_page_path, :class=>"green button super" %>
+        <% end %>
       </div>
 
     </div>
