ad soyad kullanici kaydina eklendi

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <%
     #dont show errors here, they are displayed inside the page
-    # render :partial => 'layouts/errors'
+    render :partial => 'layouts/errors'
     %>
 
     <%= yield %>
