--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,23 @@
 <div class="widget widget-light widget-form" id="w-yeni-kayit">
   <div class="w-inner">
     <div class="w-title">Yeni Kayıt Oluştur</div>
-
-
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
- 
-      <% if devise_error_messages!  %>
-        <div class="msg msg-success">
-          <%=devise_error_messages!%>
+      <% if resource.errors.any? %>
+        <div class="msg msg-error">
+          <h2><%=resource.errors.count%> hata:</h2>
+
+          <ul>
+          <% resource.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
         </div>
       <% end %>
-      
-      
+
+      <div class="field">
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+      </div>
       <div class="field">
         <%= f.label :email %>
         <%= f.text_field :email %>
@@ -25,6 +31,6 @@
 
       <div class="actions"><%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %></div>
     <% end %>
- 
+
   </div>
 </div>
