--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,7 @@
 
 <div id="content" class="clearfix">
   <div class="container">
-    <%
-    #dont show errors here, they are displayed inside the page
-    render :partial => 'layouts/errors'
-    %>
+    <%#render :partial => 'layouts/errors'%>
 
     <%= yield %>
   </div>
