--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,3 +1,10 @@
-<%= render 'form' %>
-<%= render 'layouts/sidebar'%>
+<div class="one-column">
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">Yeni Kurum Kaydı</div>
 
+        <%= render 'form' %>
+
+    </div>
+  </div>
+</div><!-- end of .one-column -->
