--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,17 +1,14 @@
-<div id="main-content">
+<div class="one-column">
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Bağış Kampanyası Düzenle</div>
-       
+
 
       <%= render 'form' %>
 
       <%= link_to 'Geri', pages_path %>
- 
+
       </div>
-    </div> 
-</div><!-- end of #main-content -->
+    </div>
+</div><!-- end of .one-column -->
 
-<%= render 'layouts/sidebar'%>
-
- 
