--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,38 @@
-<div class="widget widget-light widget-form" id="w-yeni-kayit">
-  <div class="w-inner">
-    <div class="w-title">Yeni Kayıt Oluştur</div>
-    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-      <% if resource.errors.any? %>
-        <div class="msg msg-error">
-          <h2><%=resource.errors.count%> hata:</h2>
+<div class="one-column">
+  <div class="widget widget-light" id="w-yeni-kayit">
+    <div class="w-inner">
+      <div class="w-title">Yeni Kayıt Oluştur</div>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <% if resource.errors.any? %>
+          <div class="msg msg-error">
+            <h2><%=resource.errors.count%> hata:</h2>
 
-          <ul>
-          <% resource.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-          </ul>
+            <ul>
+            <% resource.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :name %>
+          <%= f.text_field :name %>
         </div>
+        <div class="field">
+          <%= f.label :email %>
+          <%= f.text_field :email %>
+        </div>
+
+        <div class="field"><%= f.label :password %>
+        <%= f.password_field :password %></div>
+
+        <div class="field"><%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %></div>
+
+        <div class="actions"><%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %></div>
       <% end %>
 
-      <div class="field">
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-      </div>
-      <div class="field">
-        <%= f.label :email %>
-        <%= f.text_field :email %>
-      </div>
-
-      <div class="field"><%= f.label :password %>
-      <%= f.password_field :password %></div>
-
-      <div class="field"><%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %></div>
-
-      <div class="actions"><%= f.submit "Kayıt Ol", :class=>"button super yellow button-primary" %></div>
-    <% end %>
-
+    </div>
   </div>
 </div>
