--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,7 +59,7 @@
               <%=link_to "Nasıl Çalışır?", :nasil_calisir, :class => "rc-top #{print_if_selected_tab :home, :nasil_calisir}", :id => "nav-nasil"%>
             </li>
             <li>
-              <%=link_to "İletişim", :iletisim, :class => "rc-top #{print_if_selected_tab :home, :iletisim}", :id => "nav-iletisim"%>
+              <%=link_to "iletişim", :iletisim, :class => "rc-top #{print_if_selected_tab :home, :iletisim}", :id => "nav-iletisim"%>
             </li>
           </ul>
         </div>
