--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,6 +33,7 @@
   <!-- CSS : implied media="all" -->
   <%= stylesheet_link_tag "style" %>
   <%= stylesheet_link_tag "jquery-ui-1.8.8.custom" %>
+  <%= stylesheet_link_tag "facebox" %>
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <%= stylesheet_link_tag "handheld" %>
   -->
@@ -48,7 +49,7 @@
   <div id="wrapper">
     <div id="header">
       <div class="container">
-        <div id="header-logo"><a href="http://www.benvarim.com" title="BenVarım.com Anasayfa">benvarim.com</a></div>
+        <div id="header-logo"><a href="http://www.benvarim.com" title="BenVarım.com Anasayfa" rel="facebox">benvarim.com</a></div>
         <div id="header-subtitle">Kolay bağış platformu</div>
         <div id="site-nav">
           <ul class="clearfix">
